syntax = "proto3";

option go_package = "github.com/VannaLabs/vanna-op-geth/rpc/inference;inference";
package inference;

// Inference service definition
service Inference {
  // Runs a model inference
  rpc RunInference (InferenceParameters) returns (InferenceResult);
  rpc RunPipeline (PipelineParameters) returns (InferenceResult);
}

// Inference input parameters
message InferenceParameters {
  string tx = 1;
  string modelHash = 2;
  string modelInput = 3;
}

// Pipeline input parameters
message PipelineParameters{
  string tx = 1;
  string seed = 2;
  string pipelineName = 3;
  string modelHash = 4;
  string modelInput = 5;
}

// The response message containing the inference result
message InferenceResult {
  string tx = 1;
  string node = 2;
  string value = 3;
}
